# Copyright © 2013 Cisco Systems, Inc.  All rights reserved.
#
# See COPYING in top-level directory.
#
# $HEADER$
#

# Note that the -I directory must *exactly* match what was specified
# via AC_CONFIG_MACRO_DIR in configure.ac.
ACLOCAL_AMFLAGS = -Iconfig

SUBDIRS = include src tools tests

EXTRA_DIST = \
        config/netloc_get_version.sh \
        README VERSION COPYING AUTHORS
