#
# Copyright © 2013 Cisco Systems, Inc.  All rights reserved.
# Copyright (c) 2013      University of Wisconsin-La Crosse.
#                         All rights reserved.
#
# See COPYING in top-level directory.
#
# $HEADER$
#

include_HEADERS = \
	netloc.h \
	netloc_map.h \
	netloc_dc.h

noinst_HEADERS = \
        private/netloc.h \
        private/map.h

include_netlocdir = $(includedir)/netloc
include_netloc_HEADERS = \
        netloc/rename.h \
        netloc/rename_map.h

include_netloc_autogendir = $(includedir)/netloc/autogen
nodist_include_netloc_autogen_HEADERS = netloc/autogen/config.h 
