# Copyright (c) 2013 Cisco Systems, Inc.  All rights reserved.
# Copyright (c) 2013-2014 University of Wisconsin-La Crosse.
#                         All rights reserved.
#
# See COPYING in top-level directory.
#
# $HEADER$
#

SUBDIRS = \
	lsnettopo \
	reader_ib \
	reader_of \
	reader_static \
	gather_ib

